--- a/infra.properties
+++ b/infra.properties
@@ -1,5 +1,6 @@
 AZURE_LOCATION=northeurope
 visionName=nfinder
+VISION_API_URL=https://northeurope.api.cognitive.microsoft.com
 GOOGLE_LOCATION=europe-west
 GOOGLE_STORAGE_LOCATION=EU
 GOOGLE_FOLDER_ID=841607547221
