Add AzRef to run without deploy script

--- a/api/cdk-api/infra.properties
+++ b/api/cdk-api/infra.properties
@@ -1,1 +1,2 @@
 #FIRESTORE_SOMETHING={TFRef: {component: firestore, terraform: firestore, branch: master, paramName: }}
+VISION_API_KEY={AzRef: {component: vision, azure: vision, paramName: visionApiKey}}
