firestore access setup from lambda

--- a/infra.properties
+++ b/infra.properties
@@ -9,3 +9,4 @@ GOOGLE_PROJECT_ID=nfinder-12345678
 APP_URL=https://nfinder.nitorio.us
 APP_DOMAIN_NAME=nfinder.nitorio.us
 CLIENT_ID=997502378708-b0ugr5c1kfsusje8odk7jvbi3f2r9u6q.apps.googleusercontent.com
+GOOGLE_SERVICE_ACCOUNT_SECRET_NAME=nfinder/google-credentials
