--- a/api/cdk-api/package.json
+++ b/api/cdk-api/package.json
@@ -18,6 +18,7 @@
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
     "aws-cdk": "2.16.0",
+    "aws-sdk": "^2.1095.0",
     "esbuild": "^0.14.27",
     "jest": "^26.4.2",
     "ts-jest": "^26.2.0",
@@ -27,6 +28,7 @@
   "dependencies": {
     "@azure/cognitiveservices-computervision": "^8.2.0",
     "@azure/ms-rest-azure-js": "^2.1.0",
+    "@google-cloud/firestore": "^5.0.2",
     "aws-cdk-lib": "2.16.0",
     "constructs": "^10.0.0",
     "sharp": "^0.30.3",
