--- a/infra.properties
+++ b/infra.properties
@@ -5,8 +5,9 @@ GOOGLE_LOCATION=europe-west
 GOOGLE_STORAGE_LOCATION=EU
 GOOGLE_FOLDER_ID=841607547221
 GOOGLE_BILLING_ID=***REMOVED***
-GOOGLE_PROJECT_ID=nfinder-12345678
+GOOGLE_PROJECT_ID=nfinder-1
 APP_URL=https://nfinder.nitorio.us
 APP_DOMAIN_NAME=nfinder.nitorio.us
-CLIENT_ID=997502378708-b0ugr5c1kfsusje8odk7jvbi3f2r9u6q.apps.googleusercontent.com
-GOOGLE_SERVICE_ACCOUNT_SECRET_NAME=nfinder/google-credentials
+#CLIENT_ID=278244435575-269bipgrpnba1sqdqhbmk5lh1dhcn9j6.apps.googleusercontent.com
+GOOGLE_SERVICE_ACCOUNT_SECRET_NAME=nfinder/google-credentials4
+#TEMP_CLIENT_ID=997502378708-b0ugr5c1kfsusje8odk7jvbi3f2r9u6q.apps.googleusercontent.com
