--- a/infra.properties
+++ b/infra.properties
@@ -8,6 +8,6 @@ GOOGLE_BILLING_ID=***REMOVED***
 GOOGLE_PROJECT_ID=nfinder-1
 APP_URL=https://nfinder.nitorio.us
 APP_DOMAIN_NAME=nfinder.nitorio.us
-#CLIENT_ID=278244435575-269bipgrpnba1sqdqhbmk5lh1dhcn9j6.apps.googleusercontent.com
+HOSTED_ZONE=nitorio.us
+ACM_CERT_ARN=
 GOOGLE_SERVICE_ACCOUNT_SECRET_NAME=nfinder/google-credentials4
-#TEMP_CLIENT_ID=997502378708-b0ugr5c1kfsusje8odk7jvbi3f2r9u6q.apps.googleusercontent.com
