--- a/infra.properties
+++ b/infra.properties
@@ -8,6 +8,6 @@ GOOGLE_BILLING_ID=***REMOVED***
 GOOGLE_PROJECT_ID=nfinder-1
 APP_URL=https://nfinder.nitorio.us
 APP_DOMAIN_NAME=nfinder.nitorio.us
+API_DOMAIN_NAME=api.nfinder.nitorio.us
 HOSTED_ZONE=nitorio.us
-ACM_CERT_ARN=
 GOOGLE_SERVICE_ACCOUNT_SECRET_NAME=nfinder/google-credentials4
