remove google billing id

--- a/infra.properties
+++ b/infra.properties
@@ -4,7 +4,7 @@ VISION_API_URL=https://northeurope.api.cognitive.microsoft.com
 GOOGLE_LOCATION=europe-west
 GOOGLE_STORAGE_LOCATION=EU
 GOOGLE_FOLDER_ID=841607547221
-GOOGLE_BILLING_ID=***REMOVED***
+GOOGLE_BILLING_ID=***REPLACE_ME***
 GOOGLE_PROJECT_ID=nfinder-1
 APP_URL=https://nfinder.nitorio.us
 APP_DOMAIN_NAME=nfinder.nitorio.us
